# Gaussian-Discriminant-Analysis

./: Cargo.toml
data/: iris.csv
src/: main.rs
