[package]
name = "Gaussian_Discriminant_Analysis"
version = "0.1.0"
authors = ["David Bosc <davidjnbosc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }